syntax = "proto3";
package stride.records;

import "gogoproto/gogo.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/Stride-Labs/stride/x/records/types";

message UserRedemptionRecord {
  string id = 1; // {chain_id}.{epoch}.{sender}
  string sender = 2;
  string receiver = 3;
  uint64 amount = 4;
  string denom = 5;
  string host_zone_id = 6;
  uint64 epoch_number = 7;
  bool claim_is_pending = 8;
}

// Msg defines the Msg service.
service Msg {
  // this line is used by starport scaffolding # proto/tx/rpc
}

// this line is used by starport scaffolding # proto/tx/message

// Params defines the parameters for the module.
message Params { option (gogoproto.goproto_stringer) = false; }

message RecordsPacketData {
  oneof packet {
    NoData no_data = 1;
    // this line is used by starport scaffolding # ibc/packet/proto/field
  }
}

message NoData {}

// this line is used by starport scaffolding # ibc/packet/proto/message

message DepositRecord {
  uint64 id = 1;
  int64 amount = 2;
  string denom = 3;
  string host_zone_id = 4;
  enum Status {
    // pending transfer to delegate account
    STATUS_TRANSFER = 0;
    // pending staking on delegate account
    STATUS_STAKE = 1;
  }
  enum Source {
    SOURCE_STRIDE = 0;
    SOURCE_WITHDRAWAL_ICA = 1;
  }
  Status status = 6;
  uint64 deposit_epoch_number = 7;
  Source source = 8;

  reserved 5;
}

message HostZoneUnbonding {
  enum Status {
    // tokens bonded on delegate account
    STATUS_BONDED = 0;
    // unbonding completed on delegate account
    STATUS_UNBONDED = 1;
    // transfer success
    STATUS_TRANSFERRED = 2;
  }
  uint64 st_token_amount = 1;
  uint64 native_token_amount = 2;
  string denom = 3;
  string host_zone_id = 4;
  uint64 unbonding_time = 5;
  Status status = 6;
  repeated string user_redemption_records = 7;
}

message EpochUnbondingRecord {
  uint64 epoch_number = 1;
  repeated HostZoneUnbonding host_zone_unbondings = 3;
  reserved 2;
}

// GenesisState defines the recordÏ€s module's genesis state.
// next id: 9
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  repeated UserRedemptionRecord user_redemption_record_list = 3
      [ (gogoproto.nullable) = false ];
  uint64 user_redemption_record_count = 4;
  repeated EpochUnbondingRecord epoch_unbonding_record_list = 5
      [ (gogoproto.nullable) = false ];
  repeated DepositRecord deposit_record_list = 7
      [ (gogoproto.nullable) = false ];
  uint64 deposit_record_count = 8;
  // this line is used by starport scaffolding # genesis/proto/state
}
